force-app/main/default/objects/MUSW__RESTSettings__c/MUSW__RESTSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>REST Settings</label>
</CustomObject>