force-app/main/default/objects/MUSW__RESTSettings__c/fields/MUSW__Admin_Email__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Admin_Email__c</fullName>
    <description>Recipient of notifications and errors</description>
    <inlineHelpText>Recipient of notifications and errors</inlineHelpText>
    <label>Admin Email Address</label>
    <type>Email</type>
</CustomField>