force-app/main/default/objects/MUSW__RESTSettings__c/fields/MUSW__Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Batch_Size__c</fullName>
    <defaultValue>10</defaultValue>
    <label>Batch Size</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>