force-app/main/default/objects/MUSW__RESTSettings__c/fields/MUSW__Database_Operation__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Database_Operation__c</fullName>
    <description>Insert, Update, or Upsert</description>
    <inlineHelpText>Allowed values: Insert, Update, Upsert</inlineHelpText>
    <label>Database Operation</label>
    <length>20</length>
    <type>Text</type>
</CustomField>