force-app/main/default/objects/MUSW__RESTSettings__c/fields/MUSW__Field_Map__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Field_Map__c</fullName>
    <description>The expected BasicGov name to (:) the external REST Service parameter name. e.g. city:City, street:Address, ... The current supported fields are street, city, state, country, and zip.</description>
    <inlineHelpText>The expected BasicGov field name to (:) the external REST Service parameter name. Multiple mappings are separated by a comma. e.g. city:City, street:Address, ... The current supported fields are street, city, state, country, and zip.</inlineHelpText>
    <label>Request Field Map</label>
    <length>255</length>
    <type>Text</type>
</CustomField>