force-app/main/default/objects/MUSW__RESTSettings__c/fields/MUSW__ID_Field__c.field-meta.xml
<CustomField>
    <fullName>MUSW__ID_Field__c</fullName>
    <description>REST Service unique ID field (e.g. OBJECTID)</description>
    <inlineHelpText>REST Service unique ID field (e.g. OBJECTID)</inlineHelpText>
    <label>Request ID Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>