force-app/main/default/objects/MUSW__RESTSettings__c/fields/MUSW__ID_Map__c.field-meta.xml
<CustomField>
    <fullName>MUSW__ID_Map__c</fullName>
    <description>The expected BasicGov name to (:) the external REST Service parameter name. e.g. MUSW__Parcel_Number2__c:APN.</description>
    <inlineHelpText>The expected BasicGov name to (:) the external REST Service parameter name. e.g. MUSW__Parcel_Number2__c:APN. The parameter has to be already defined in Traverse Instructions.</inlineHelpText>
    <label>Request ID Map</label>
    <length>255</length>
    <type>Text</type>
</CustomField>