force-app/main/default/objects/MUSW__RESTSettings__c/fields/MUSW__isActive__c.field-meta.xml
<CustomField>
    <fullName>MUSW__isActive__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>