force-app/main/default/objects/MUSW__RESTSettings__c/fields/MUSW__Last_Run_Date_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Last_Run_Date_Field_Name__c</fullName>
    <label>Request Last Run Date Field Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>