force-app/main/default/objects/MUSW__RESTSettings__c/fields/MUSW__Last_Run_DateTime__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Last_Run_DateTime__c</fullName>
    <description>Date reference for queries</description>
    <label>Benchmark Date</label>
    <type>DateTime</type>
</CustomField>