force-app/main/default/objects/MUSW__RESTSettings__c/fields/MUSW__Password__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Password__c</fullName>
    <description>AES-128 encrypted password</description>
    <label>Password</label>
    <length>100</length>
    <type>Text</type>
</CustomField>