force-app/main/default/objects/MUSW__RESTSettings__c/fields/MUSW__Pull_Condition__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Pull_Condition__c</fullName>
    <description>The condition for Pull requests. This would be the SQL where-clause for Pull operation</description>
    <inlineHelpText>Example: TYPE = 'Test' and STATUS = 'Open'</inlineHelpText>
    <label>Pull Condition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>