force-app/main/default/objects/MUSW__RESTSettings__c/fields/MUSW__Push_Condition__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Push_Condition__c</fullName>
    <description>The condition for Pull requests. This would be the SQL where-clause for Pull operation</description>
    <inlineHelpText>Example: MUSW__Status__c = 'Open'</inlineHelpText>
    <label>Push Condition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>