force-app/main/default/objects/MUSW__RESTSettings__c/fields/MUSW__Sync_Operation__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Sync_Operation__c</fullName>
    <description>This field is only used by Sync applications (e.g. GIS Sync)</description>
    <inlineHelpText>Allowed values: Push Only, Pull Only, Push then Pull, Pull then Push. This field is only used by Sync applications</inlineHelpText>
    <label>Sync Operation</label>
    <length>20</length>
    <type>Text</type>
</CustomField>