force-app/main/default/objects/MUSW__RESTSettings__c/fields/MUSW__Token__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Token__c</fullName>
    <label>Token</label>
    <length>100</length>
    <type>Text</type>
</CustomField>