force-app/main/default/objects/MUSW__RESTSettings__c/fields/MUSW__Traverse_Instructions__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Traverse_Instructions__c</fullName>
    <description>A Traverse Instruction contains key names to JSON paths. e.g. x$candidates[*].location.x. Multiple Instructions are separated using a semi-colon. Refer to the Wiki for details.</description>
    <inlineHelpText>A Traverse Instruction contains key names to JSONpaths. e.g. x,y$candidates[*].location["x","y"]. Multiple Instructions are separated using a ; symbol. Refer to the Wiki for details.</inlineHelpText>
    <label>Response Traverse Instructions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>