force-app/main/default/objects/MUSW__RESTSettings__c/fields/MUSW__Update_Nulls__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Update_Nulls__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Null Values</label>
    <type>Checkbox</type>
</CustomField>