force-app/main/default/objects/MUSW__RESTSettings__c/fields/MUSW__URL__c.field-meta.xml
<CustomField>
    <fullName>MUSW__URL__c</fullName>
    <description>The URL for the REST Server. Important: You need to use https whenever possible, especially if the service is protected (eg. token-based).</description>
    <inlineHelpText>The URL for the REST Server</inlineHelpText>
    <label>URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>