force-app/main/default/objects/MUSW__RESTSettings__c/fields/MUSW__Username__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Username__c</fullName>
    <description>AES-128 encrypted username</description>
    <label>Username</label>
    <length>100</length>
    <type>Text</type>
</CustomField>